--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,17 @@ html {
   height: 100%;
   background-color: var(--secondary-dark);
 }
+
+.menu-icon {
+  width: var(--rem-3);
+  height: var(--rem-3);
+  position: fixed;
+  top: var(--rem-5);
+  right: var(--rem-5);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+  z-index: 200;
+}
