Styled lines and uncommented toggle JS. Menu Icon transforms on click.

--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,18 @@ html {
   cursor: pointer;
   z-index: 200;
 }
+
+.line {
+  width: var(--rem-3);
+  height: var(--size-2);
+  background-color: var(--primary);
+  transition: transform 0.3s;
+}
+
+.change .line-1 {
+  transform: rotateZ(45deg) translate(0.7rem, -0.1rem);
+}
+
+.change .line-2 {
+  transform: rotateZ(-45deg) translate(0.7rem, -0.1rem);
+}
