Navigation sub container styled.

--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,12 @@ html {
 .change .line-2 {
   transform: rotateZ(-45deg) translate(0.7rem, -0.1rem);
 }
+
+.navigation {
+  width: 50rem;
+  height: 100vh;
+  background-color: var(--dark);
+  display: flex;
+  align-items: center;
+  padding-left: 8rem;
+}
