Starting work on media queries. First off - max width 1700px and 1500px.

--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,18 @@ html {
 .section-border::after {
   bottom: -3rem;
 }
+
+@media (max-width: 1700px) {
+  html {
+    font-size: 57%;
+  }
+  .navigation {
+    right: -70rem;
+  }
+}
+
+@media (max-width: 1500px) {
+  html {
+    font-size:52%;
+  }
+}
