--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,21 @@ html {
 
 @media (max-width: 1500px) {
   html {
-    font-size:52%;
+    font-size: 52%;
+  }
+}
+
+@media (max-width: 1200px) {
+  html {
+    font-size: 45%;
+  }
+}
+
+@media (max-width: 900px) {
+  html {
+    font-size: 39%;
+  }
+  .section-border {
+    display: none;
   }
 }
