--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,13 @@ html {
   color: var(--secondary);
 }
 
+.landing {
+  width: 100%;
+  height: 100vh;
+  position:relative;
+  color: white; 
+}
+
 .section-border {
   height: 55rem;
   width: 0.3rem;
