--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html {
 
 :root {
   --primary: #ff4500;
-  --secondary: #0fa2a2;
+  --secondary: #2ab1b1;
   --secondary-dark: #012222;
   --light: #fffcfa;
   --dark: #111;
