Media queries for for section-bg-heading class at 1500px and 900px. Need to review the font and text here.

--- a/styles.css
+++ b/styles.css
@@ -180,12 +180,16 @@ html {
   html {
     font-size: 52%;
   }
+  .section-bg-heading {
+    font-size: 23rem;
+  } 
 }
 
 @media (max-width: 1200px) {
   html {
     font-size: 45%;
   }
+  
 }
 
 @media (max-width: 900px) {
@@ -194,6 +198,9 @@ html {
   }
   .section-border {
     display: none;
+  }
+  .section-bg-heading {
+    font-size: 20rem;
   }
 }
 
