--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=VT323&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Caveat:wght@400..700&display=swap');
+
 * {
   font-family: 'Cormorant Garamond', serif;
   font-weight: '300';
@@ -134,7 +136,9 @@ html {
   width: 100%;
   text-align: center;
   font-size: 30rem;
-  font-family: 'VT323', monospace;
+  /* font-family: 'VT323', monospace; */
+  /* font-family: 'Caveat', cursive; */
+  font-family: 'Amatic SC', sans-serif;
   color: var(--primary);
   opacity: 0.5;
 }
