--- a/styles.css
+++ b/styles.css
@@ -136,8 +136,6 @@ html {
   width: 100%;
   text-align: center;
   font-size: 30rem;
-  /* font-family: 'VT323', monospace; */
-  /* font-family: 'Caveat', cursive; */
   font-family: 'Amatic SC', sans-serif;
   color: var(--primary);
   opacity: 0.5;
@@ -211,6 +209,9 @@ html {
 @media (max-width: 700px) {
   html {
     font-size: 35%;
+  }
+  .section-bg-heading {
+    font-size: 17rem;
   }
 }
 
