--- a/styles.css
+++ b/styles.css
@@ -220,11 +220,16 @@ font-family: 'Amatic SC', sans-serif;
   width: 60rem;
   height: 60rem;
   border-radius: 50%;
-  background-color: var(--primary);
+  background-color: transparent;
   padding: 2rem 2rem 0 2rem;
-  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, 0.5);
   overflow: hidden;
   position: relative;
+}
+
+.dev-img-wrapper img {
+  width: 100%;
+  height: 100%;
 }
 
 
