--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ html {
   font-size: 30rem;
   font-family: 'Amatic SC', sans-serif;
   color: var(--primary);
-  opacity: 0.2;
+  opacity: 0.1;
 }
 
 .logo {
@@ -230,6 +230,22 @@ font-family: 'Amatic SC', sans-serif;
 .dev-img-wrapper img {
   width: 100%;
   height: 100%;
+}
+
+.dev-work {
+  width: 25rem;
+  height: 9rem;
+  background-color: var(--primary);
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: var(--dark);
+  border: 0.2rem solid var(--dark);
+  border-radius: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.4);
 }
 
 
