--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,20 @@ font-family: 'Amatic SC', sans-serif;
   height: 100%;
 }
 
+.btn {
+  width: 20rem;
+  height: 6rem;
+  border: 0.2rem solid var(--secondary);
+  border-radius: 0.3rem;
+  background-color: transparent;
+  color: var(--primary);
+  font-size: 2.5rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  position: relative;
+  cursor: pointer;
+  margin-right: 7rem;
+}
 
 @media (max-width: 1700px) {
   html {
