--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,20 @@ font-family: 'Amatic SC', sans-serif;
   margin-right: 7rem;
 }
 
+.btn::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary);
+  border-radius: 0.3rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  transform: scale(0);
+  transition: transform 0.3s;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
