--- a/styles.css
+++ b/styles.css
@@ -292,15 +292,22 @@ font-family: 'Amatic SC', sans-serif;
   content: '';
   width: 100%;
   height: 100%;
-  background-color: var(--secondary);
+  background-color: var(--dark);
   border-radius: 0.3rem;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: -10;
   transform: scale(0);
   transition: transform 0.3s;
 }
+
+.btn:hover::before {
+  transform: scale(1);
+  transition: transform 0.5s;
+}
+
+
 
 @media (max-width: 1700px) {
   html {
