--- a/styles.css
+++ b/styles.css
@@ -307,6 +307,15 @@ font-family: 'Amatic SC', sans-serif;
   height: 100%;
 }
 
+.skills {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
