--- a/styles.css
+++ b/styles.css
@@ -332,6 +332,13 @@ font-family: 'Amatic SC', sans-serif;
   text-transform: uppercase;
 }
 
+.skills .section-border {
+  position: absolute;
+  left: 20rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
