--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,7 @@ font-family: 'Amatic SC', sans-serif;
 .section-heading {
   font-family: 'Amatic SC', sans-serif;
   font-size: 6rem;
-  font-weight: 300;
+  font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   color: var(--primary);
@@ -346,6 +346,9 @@ font-family: 'Amatic SC', sans-serif;
   .navigation {
     right: -70rem;
   }
+  .skills .section-border {
+    left: 10rem;
+  }
 }
 
 @media (max-width: 1500px) {
@@ -355,6 +358,13 @@ font-family: 'Amatic SC', sans-serif;
   .section-bg-heading {
     font-size: 23rem;
   } 
+  .skills {
+    height: 100%;
+    padding: 10rem 0 20rem 0;
+  }
+  .skills .section-border {
+    height: 85rem;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -393,5 +403,8 @@ font-family: 'Amatic SC', sans-serif;
     right: -100rem;
     justify-content: center;
     text-align: center
+  }
+  .section-heading {
+    text-align: center;
   }
 }
