--- a/styles.css
+++ b/styles.css
@@ -310,6 +310,21 @@ html {
   margin-bottom: 4rem;
 }
 
+.project-img {
+  width: 36rem;
+  height: 20rem;
+  border-radius: 0.3rem;
+  overflow: hidden;
+}
+
+.project-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
