--- a/styles.css
+++ b/styles.css
@@ -310,6 +310,16 @@ html {
   margin-bottom: 4rem;
 }
 
+.projects {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10rem;
+}
+
 .project-img {
   width: 36rem;
   height: 20rem;
