--- a/styles.css
+++ b/styles.css
@@ -318,6 +318,7 @@ html {
   flex-direction: column;
   align-items: center;
   margin-bottom: 10rem;
+  background-color: var(--dark);
 }
 
 .project-img {
@@ -333,6 +334,16 @@ html {
   object-fit: cover;
   border-radius: 0.3rem;
   cursor: pointer;
+}
+
+.projects-cards {
+  width: 140rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 10rem;
+  padding-bottom: 10rem;
+  z-index: 10;
 }
 
 @media (max-width: 1700px) {
