--- a/styles.css
+++ b/styles.css
@@ -321,21 +321,6 @@ html {
   background-color: var(--dark);
 }
 
-.project-img {
-  width: 36rem;
-  height: 20rem;
-  border-radius: 0.3rem;
-  overflow: hidden;
-}
-
-.project-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 0.3rem;
-  cursor: pointer;
-}
-
 .projects-cards {
   width: 140rem;
   display: flex;
@@ -356,6 +341,25 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.project-img {
+  width: 36rem;
+  height: 20rem;
+  border-radius: 0.3rem;
+  overflow: hidden;
+}
+
+.project-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+
+.project-img img:hover {
+  transform: scale(1.3);
 }
 
 @media (max-width: 1700px) {
