--- a/styles.css
+++ b/styles.css
@@ -362,6 +362,13 @@ html {
   transform: scale(1.3);
 }
 
+.project-name {
+  font-size: 3rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: var(--secondary) 
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
