--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 10rem;
+  /* margin-bottom: 10rem; */
   background-color: var(--dark);
 }
 
@@ -370,7 +370,10 @@ html {
   margin-top: -2rem;
 }
 
-.project-description {}
+.project-description {
+  font-size: 2.2rem;
+  color: var(--primary)
+}
 
 @media (max-width: 1700px) {
   html {
