--- a/styles.css
+++ b/styles.css
@@ -317,23 +317,26 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin-bottom: 10rem; */
   background-color: var(--dark);
 }
 
+.projects .section-heading {
+  margin-top: 5rem;
+} 
 .projects-cards {
   width: 140rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 10rem;
-  padding-bottom: 10rem;
+  margin-top: 5rem;
+  text-align: center;
   z-index: 10;
 }
 
 .project-card {
   width: 40rem;
   height: 55rem;
+  text-align: center;
   background-color: var(--secondary-dark);
   margin: 2rem;
   padding: 2rem;
@@ -356,10 +359,6 @@ html {
   object-fit: cover;
   border-radius: 0.3rem;
   cursor: pointer;
-}
-
-.project-img img:hover {
-  transform: scale(1.3);
 }
 
 .project-name {
