--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,6 @@ html {
 
 .skills-cards {
   width: 140rem;
-  margin: 4rem;
   display: flex;
   flex-wrap: wrap;
 }
@@ -323,12 +322,12 @@ html {
 .projects .section-heading {
   margin-top: 5rem;
 } 
+
 .projects-cards {
   width: 140rem;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 5rem;
   text-align: center;
   z-index: 10;
 }
@@ -366,12 +365,29 @@ html {
   font-weight: 300;
   text-transform: uppercase;
   color: var(--secondary); 
-  margin-top: -2rem;
 }
 
 .project-description {
   font-size: 2.2rem;
   color: var(--primary)
+}
+
+.project-btn {
+  width: 20rem;
+  height: 5rem;
+  background-color: transparent;
+  border: 0.2rem solid var(--secondary);
+  border-radius: 0.3rem;
+  color: var(--primary);
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin: 2rem auto;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in;
+}
+
+.project-btn:hover {
+  background-color: var(--dark);
 }
 
 @media (max-width: 1700px) {
