--- a/styles.css
+++ b/styles.css
@@ -390,6 +390,15 @@ html {
   background-color: var(--dark);
 }
 
+.contact {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
