--- a/styles.css
+++ b/styles.css
@@ -399,6 +399,24 @@ html {
   align-items: center;
 }
 
+.contact-content {
+  width: 120rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 7rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact-left div {
+  display: flex;
+  align-items: center;
+  margin: 3rem 0;
+}
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
