Input group textarea

--- a/styles.css
+++ b/styles.css
@@ -494,6 +494,12 @@ textarea {
   width: 35rem;
 }
 
+.input-group textarea {
+  height: 12rem;
+  margin-bottom: 2rem;
+  resize: none;
+}
+
 
 
 @media (max-width: 1700px) {
