--- a/styles.css
+++ b/styles.css
@@ -537,6 +537,17 @@ textarea {
   background-color: var(--dark);
 }
 
+.footer {
+  width: 100%;
+  height: 10rem;
+  background-color: var(--dark);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
 @media (max-width: 1700px) {
   html {
     font-size: 57%;
